<resources>
    <string name="app_name">Voice Inspector GUI</string>
    <string name="filterimg">filterIMG</string>
    <string name="settingsimg">settingsIMG</string>
    <string name="route_title">маршрутный лист</string>
    <string name="card_title">прием показаний</string>
    <string name="LS">лицевой счет №</string>
    <string name="LS_placeholder">0000 0000000</string>
    <string name="card_numbers_title">номера</string>
    <string name="card_fio_placeholder">фамилия имя отчество</string>
    <string name="fio_capitalized_placeholder">Фамилиев Имя Отчествович</string>
    <string name="card_address_placeholder">адрес</string>
    <string name="card_address_capitalized_placeholder">г.Чебоксары, ул.Университетская д.36, подъезд №2, квартира №54</string>
    <string name="info_icon">info_icon</string>
    <string name="card_gsv_title">гвс</string>
    <string name="card_rb_night">ночь</string>
    <string name="card_rb_peak">пик</string>
    <string name="card_rb_half_peak">полупик</string>
    <string name="card_prev_title">Предыдущее от 01.01.1970</string>
    <string name="card_value_placeholder">1200</string>
    <string name="card_current_title_placeholder">Текущее от 01.01.1970</string>
    <string name="card_new_title_placeholder">Новое от 01.01.1970</string>
    <string name="card_hvs_title">хвс</string>
    <string name="card_ele_title">эл.</string>
    <string name="dropper_icon">dropper_icon</string>
    <string name="action_button_text">записать</string>
    <string name="off">ВЫКЛ</string>
    <string name="on">ВКЛ</string>
    <string name="settings_auto_start_title">Автоматический запуск:</string>
    <string name="settings_auto_title">«АВТО» ПРИ НАЛИЧИИ СЕТИ:</string>
    <string name="settings_opt_a_title">РЕГУЛИРУЕМАЯ ОПЦИЯ А:</string>
    <string name="settings_opt_b_title">РЕГУЛИРУЕМАЯ ОПЦИЯ Б:</string>
    <string name="settings_opt_c_title">РЕГУЛИРУЕМАЯ ОПЦИЯ В:</string>
    <string name="settings_title">настройки</string>
    <string name="settings_server_address">АДРЕС СЕРВЕРА:</string>
    <string name="settings_server_address_placheholder">remote.codepool.ru/rpc</string>
    <string name="settings_key">КЛЮЧ АВТОРИЗАЦИИ:</string>
    <string name="settings_key_placeholder">45fGzZ91</string>
    <string name="settings_status">СТАТУС СЛУЖБЫ:</string>
    <string name="settings_status_text_off">выкл</string>
    <string name="settings_status_text_off_problems">выкл</string>
    <string name="settings_status_text_on">вкл</string>
    <string name="settings_status_text_on_problems">вкл</string>
    <string name="settings_button_save_text">сохранить</string>
    <string name="settings_button_service_text_start">запустить службу</string>
    <string name="settings_button_service_text_stop">остановить службу</string>
    <string name="settings_auto_network">«АВТО» ПРИ НАЛИЧИИ СЕТИ:</string>
    <string name="note_title_placeholder">Заметка пп №012345</string>
    <string name="note_button_text">записать</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="status_paused">в паузе</string>
    <string name="status_dropped">проблемные</string>
    <string name="note">заметка</string>
    <string name="filter_button_text">отфильтровать</string>
    <string name="status_accepted">принятые</string>
    <string name="filter_title">фильтр поиска</string>
    <string name="prev">Предыдущее от </string>
    <string name="current">Текущее от </string>
    <string name="news">Новое от </string>
    <string name="numbers">номера пу</string>
    <string name="zeroToHero">0123456789</string>
    <string name="card_note_placeholder">заметка</string>
    <string name="settings_theme">ТЕМНОЕ ОФОРМлЕНИЕ:</string>
    <string name="taskTitle">Прием показаний №000000</string>
    <string name="taskNote">г.Чебоксары, ул.Университетская д.36, подъезд №2, квартира №54</string>
    <string name="taskAddress">г.Чебоксары, ул.Университетская д.36, подъезд №2, квартира №54</string>
    <string name="taskLS">ЛС №00000000000</string>
    <string name="taskNoteButtonDesc">note</string>
    <string name="taskStatusButtonDesc">status</string>
    <string name="taskActualDueDate">Истекает 01.01.1970</string>
</resources>
