<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorLightGrey"
    tools:context=".SplashScreenActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/app_pressable_background"
            android:contentDescription="@string/settingsimg"
            android:scaleType="fitCenter"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/icon_settings"
            app:srcCompat="@drawable/icon_settings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:inputType="none"
                android:text="@string/route_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorActivityTitle"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/idIV_Filter"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/app_pressable_background"
            android:contentDescription="@string/filterimg"
            android:scaleType="fitCenter"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:src="@drawable/icon_filter" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRouteRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:itemCount="3"
        tools:listitem="@layout/route_task" />

</androidx.constraintlayout.widget.ConstraintLayout>